<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStorage</string>
    <string name="Description">MyStorage gives basic demo of how to authorized through Bitcasa Cloudfs, upload a file to MyDrive, download first file from Bitcasa MyDrive!\n</string>
    <string name="action_settings">Settings</string>
    <string name="authenticate">Authenticate</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="authorized">Authorized</string>
	<string name="not_authorized">Not authorized!</string>
	<string name="upload_file_path">Upload file path</string>
	<string name="download_destination">Dowload destination</string>
	<string name="go">Go!</string>
	<string name="please_authorize">Your bitcasa account is not authorized!</string>
	<string name="please_enter_path">Please enter destination path</string>
	<string name="file_uploaded">File has been upload successfully.</string>
	<string name="upload_failed">Upload has failed!</string>
	<string name="file_downloaded">File just downloaded!</string>
	<string name="unlink">Unlink</string>
</resources>
